--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,6 +57,8 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //  implementation 'com.facebook.android:facebook-login:[8.1]'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
