--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   font_awesome_flutter: ^9.1.0
   provider: ^5.0.0
   firebase_core: ^1.4.0
+  flutter_facebook_auth: ^3.5.0
+  flutter_facebook_login: ^3.0.0
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
